--- a/raspimouse_bringup/CMakeLists.txt
+++ b/raspimouse_bringup/CMakeLists.txt
@@ -29,4 +29,9 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
