--- a/raspimouse_cartgrapher/CMakeLists.txt
+++ b/raspimouse_cartgrapher/CMakeLists.txt
@@ -17,8 +17,6 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(cartgrapher_ros REQUIRED)
-find_package(launch_ros REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -30,5 +28,10 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+install(DIRECTORY
+  launch config
+  DESTINATION share/${PROJECT_NAME}/
+)
 
 ament_package()
