--- a/raspimouse_cartgrapher/package.xml
+++ b/raspimouse_cartgrapher/package.xml
@@ -9,8 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>cartgrapher_ros</depend>
-  <depend>launch_ros</depend>
+  <exec_depend>cartgrapher_ros</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
