--- a/raspimouse_cartgrapher/package.xml
+++ b/raspimouse_cartgrapher/package.xml
@@ -9,7 +9,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>cartgrapher_ros</exec_depend>
+  <exec_depend>cartographer_ros</exec_depend>
   <exec_depend>launch_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
