depend nav2_map_server

--- a/raspimouse_cartographer/package.xml
+++ b/raspimouse_cartographer/package.xml
@@ -11,6 +11,7 @@
 
   <exec_depend>cartographer_ros</exec_depend>
   <exec_depend>launch_ros</exec_depend>
+  <exec_depend>nav2_map_server</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
