--- a/raspimouse_cartographer/package.xml
+++ b/raspimouse_cartographer/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>cartographer_ros</exec_depend>
+  <exec_depend>rviz2</exec_depend>
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>nav2_map_server</exec_depend>
 
