--- a/raspimouse_bringup/package.xml
+++ b/raspimouse_bringup/package.xml
@@ -18,6 +18,7 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>teleop_twist_joy</exec_depend>
   <exec_depend>teleop_twist_keyboard</exec_depend>
+  <exec_depend>rviz2</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
