--- a/raspimouse_navigation2/package.xml
+++ b/raspimouse_navigation2/package.xml
@@ -9,9 +9,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>navigation2</depend>
-  <depend>rviz2</depend>
-  <depend>launch_ros</depend>
+  <exec_depend>navigation2</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
