--- a/raspimouse_navigation2/config/raspimouse_rplidar_a1m8.yaml
+++ b/raspimouse_navigation2/config/raspimouse_rplidar_a1m8.yaml
@@ -6,7 +6,7 @@ amcl:
     alpha3: 0.2
     alpha4: 0.2
     alpha5: 0.2
-    base_frame_id: "base_footprint"
+    base_frame_id: "base_link"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
@@ -64,9 +64,7 @@ dwb_controller:
     max_speed_xy: 0.22
     min_speed_theta: 0.0
     min_x_velocity_threshold: 0.001
-    # Add high threshold velocity for turtlebot 3 issue.
-    # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
     acc_lim_x: 2.5
     acc_lim_y: 0.0
