--- a/raspimouse_navigation2/package.xml
+++ b/raspimouse_navigation2/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>navigation2</exec_depend>
+  <exec_depend>nav2_bringup</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <exec_depend>launch_ros</exec_depend>
 
