add raspimouse_bags module

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "cartographer_ros"]
 	path = cartographer_ros
 	url = git@github.com:ROBOTIS-GIT/cartographer_ros.git
+[submodule "raspimouse_bags"]
+	path = raspimouse_bags
+	url = git@github.com:youtalk/raspimouse_bags.git
