--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "raspimouse_driver"]
 	path = raspimouse_driver
-	url = git@github.com:youtalk/raspimouse2.git
+	url = https://github.com/youtalk/raspimouse2.git
 [submodule "rplidar_driver"]
 	path = rplidar_driver
-	url = git@github.com:youtalk/rplidar_ros.git
+	url = https://github.com/youtalk/rplidar_ros.git
 [submodule "raspimouse_simulation"]
 	path = raspimouse_simulation
-	url = git@github.com:youtalk/raspimouse_sim.git
+	url = https://github.com/youtalk/raspimouse_sim.git
 [submodule "cartographer_ros"]
 	path = cartographer_ros
-	url = git@github.com:youtalk/cartographer_ros.git
+	url = https://github.com/youtalk/cartographer_ros.git
 [submodule "raspimouse_bags"]
 	path = raspimouse_bags
-	url = git@github.com:youtalk/raspimouse_bags.git
+	url = https://github.com/youtalk/raspimouse_bags.git
